# ai-code-review

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  README.md  pyproject.toml  test_sample2.c
docs/: SOP.md
docs/plans/: 2026-02-27-ai-code-review-design.md  2026-02-27-ai-code-review-implementation.md  2026-02-28-hook-deployment-redesign-plan.md  2026-02-28-hook-deployment-redesign.md  2026-03-01-hooks-llm-integration-plan.md  2026-03-01-quality-ux-reliability-design.md  2026-03-01-quality-ux-reliability-plan.md  2026-03-13-context-and-commit-template-design.md  2026-03-13-context-and-commit-template-plan.md
src/ai_code_review/: __init__.py  cli.py  commit_check.py  commit_template.py  config.py  exceptions.py  formatters.py  git.py  prompts.py  reviewer.py
src/ai_code_review/llm/: base.py  enterprise.py  ollama.py  openai.py
tests/: test_cli.py  test_commit_check.py  test_commit_flow.py  test_commit_template.py  test_config.py  test_exceptions.py  test_formatters.py  test_git.py  test_hooks.py  test_prompts.py  test_reviewer.py
tests/test_llm/: test_base.py  test_enterprise.py  test_ollama.py  test_openai.py
