[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-review"
version = "0.1.0"
description = "AI-powered code review CLI for Android BSP teams"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "respx>=0.22",
]

[project.scripts]
ai-review = "ai_code_review.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
